Styling badge cards

--- a/app/assets/stylesheets/color.sass
+++ b/app/assets/stylesheets/color.sass
@@ -21,9 +21,11 @@ $color-green-4: #7CC09B
 $color-green-5: #EFFFED
 $greens: (0: #1C7200, 1: #219800, 2: #68A127, 3: #7CC02F, 4: #7CC09B, 5: #EFFFED)
 
+$color-red-0: #7F0D0D
 $color-red-1: #B40D0D
 $color-red-2: #CC0000
-$reds: (1: #B40D0D, 2: #CC0000)
+$color-red-3: #D65C5C
+$reds: (0: #7F0D0D, 1: #B40D0D, 2: #CC0000, 3: #D65C5C)
 
 $color-orange-1: #F1592A
 $color-orange-2: #F7941E
