--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -32,31 +32,42 @@
         = select_tag :team_id, options_for_select(@teams.map { |t| [t.name, t.id] }, @team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
 
   //badge icon, total awarded, and points
-  .badge-image
-    %img{:src => @badge.icon, :alt => @badge.name, :width => "100" }
-  .badge-details
-    %ul
-      %li="Awarded: #{@badge.awarded_count}"
-      - if @badge.point_total?
-        %li="Points: #{@badge.point_total}"
-      - if @badge.is_unlockable?
-        %li 
-          %a
-            %i.fa.fa-lock
-            Unlock Requirements
-          .display_on_hover.hover-style
-            %ul
-              - @badge.unlock_conditions.each do |condition|
-                %li= "#{condition.name} must be #{condition.condition_state}"
-      - if @badge.is_a_condition?
-        %li
-          %a
-            %i.fa.fa-key
-            Unlock Keys
-          .display_on_hover.hover-style
-            %ul
-              - @badge.unlock_keys.each do |key|
-                %li= "#{key.unlockable.name} is unlocked by #{key.condition_state} #{key.condition.name}"
+  .badge-card
+    .badge-table.hexagon.awarded
+      %img.earned{:src => @badge.icon, :alt => @badge.name }
+      .ribbon
+        .ribbon-stitches-top
+        %strong.ribbon-content
+          %h1= @badge.name
+        .ribbon-stitches-bottom
+      .ribbon-ends
+      .gold-stars
+        %i.fa.fa-star.fa-fw
+        .earned-count= @badge.earned_badges.count
+        .badges-earned.blue
+    .badge-details
+      %ul
+        - if @badge.point_total?
+          %li="#{@badge.point_total} Points"
+        %li="Awarded: #{@badge.awarded_count}"
+        - if @badge.is_unlockable?
+          %li 
+            %a
+              %i.fa.fa-lock
+              Unlock Requirements
+            .display_on_hover.hover-style
+              %ul
+                - @badge.unlock_conditions.each do |condition|
+                  %li= "#{condition.name} must be #{condition.condition_state}"
+        - if @badge.is_a_condition?
+          %li
+            %a
+              %i.fa.fa-key
+              Unlock Keys
+            .display_on_hover.hover-style
+              %ul
+                - @badge.unlock_keys.each do |key|
+                  %li= "#{key.unlockable.name} is unlocked by #{key.condition_state} #{key.condition.name}"
 
   .clear
   - if @badge.description?
