--- a/app/views/home/color_theme.html.haml
+++ b/app/views/home/color_theme.html.haml
@@ -22,7 +22,7 @@
   .color-group
     %h4 Warm Hues
     .color-bar
-      != color_block_set("red", %w[ 1 2 ])
+      != color_block_set("red", %w[ 0 1 2 3])
       != color_block_set("orange", %w[ 1 2 3 ])
       != color_block_set("yellow", %w[ 1 2 ])
 
