--- a/app/views/students/badges.html.haml
+++ b/app/views/students/badges.html.haml
@@ -11,7 +11,7 @@
       - @earned_badges.each do |earned_badge|
         -# logic for badges that have actually been earned
         - if @earned_badges_by_badge_id[earned_badge.badge_id]
-          .badge-info
+          .badge-card
             .badge-table.hexagon.awarded
               %img.earned{ :src => earned_badge.icon, :alt => earned_badge.name }
 
@@ -23,14 +23,14 @@
               .ribbon-ends
               .gold-stars
                 %i.fa.fa-star.fa-fw
+                .earned-count= @earned_badges_by_badge_id[earned_badge.badge_id].count
                 .badges-earned.blue 
-                  .earned-count= @earned_badges_by_badge_id[earned_badge.badge_id].count
-              .badge-card
-                - if earned_badge.badge.point_total?
-                  - if @earned_badges_by_badge_id[earned_badge.badge_id].size > 1
-                    .points= "#{@earned_badges_by_badge_id[earned_badge.badge_id].collect(&:score).reduce(:+)} points earned" 
-                = earned_badge.created_at
-                = raw earned_badge.try(:feedback)
+            .badge-details
+              - if earned_badge.badge.point_total?
+                - if @earned_badges_by_badge_id[earned_badge.badge_id].size > 1
+                  .points= "#{points @earned_badges_by_badge_id[earned_badge.badge_id].collect(&:score).reduce(:+)} points earned" 
+              = earned_badge.created_at
+              = raw earned_badge.try(:feedback)
     - if @unearned_badges.present?
       .clear
       %h4= "Possible #{term_for :badges}"
