--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -1,18 +1,3 @@
-/* used on the badge show page */ 
-.badge-image
-  float: left
-  position: relative
-  width: 6.25rem
-  background-color: $color-blue-3
-  padding: 1rem
-  height: 6rem
-
-.badge-details
-  float: left
-  width: 20rem
-  height: 8rem
-  background-color: $color-yellow-1
-
 .badge-icon
   width: 80%
   max-width: 100px
@@ -21,26 +6,48 @@ button#remove-badges, button#add-badges
   margin-left: .5rem
   position: relative
   margin-top: 0rem
-  top: -.3rem
+  top: -.2rem
+  font-family: "Avenir", Helvetica, sans-serif
   @include transition-property("background, opacity")
   @include transition-duration(0.3s)
   @include transition-timing-function(ease)
 
-.badge-card
-  display: none
-
-.badge-info:hover 
-  position: absolute
-  background-color: $color-green-3
+.badge-card 
+  position: relative
   border-radius: $global-radius
   width: 18rem
-  height: 7rem
-  padding: 0 1rem 1rem 0
-  z-index: 1000
-  .badge-card
-    float: right
-    display: inline
-    font-size: .7rem
+  height: 6.5rem
+  padding: 0 1rem 1rem 1rem
+  margin-bottom: 1rem
+  background-color: $color-blue-4
+  background: -webkit-gradient(linear, left top, left bottom, from($color-blue-4), to($color-blue-3))
+  background: -webkit-linear-gradient(top, $color-blue-4, $color-blue-3)
+  background: -moz-linear-gradient(top, $color-blue-4, $color-blue-3)
+  background: -ms-linear-gradient(top, $color-blue-4, $color-blue-3)
+  background: -o-linear-gradient(top, $color-blue-4, $color-blue-3)
+  background-image: -ms-linear-gradient(top, $color-blue-4 0%, $color-blue-3 100%)
+
+  .badge-details
+    margin: .25rem
+    padding-top: 1rem
+
+
+.grade-badge, .badge-table
+  img.earned, img.unearned
+    max-height: 5rem
+    margin: 0 auto
+    z-index: 80
+    position: absolute
+    margin: -14px 0 0 2px
+
+.earned-count
+  position: absolute
+  font-size: .8rem !important
+  right: 17px
+  color: $color-black
+  margin-top: -25px
+  font-size: 1rem
+  font-weight: normal
 
 .grade-badge, .badge-table
   &.hexagon
@@ -61,22 +68,22 @@ button#remove-badges, button#add-badges
       background-color: $color-blue-1
 
     &.awarded
-      background-color: $color-green-1
+      background-color:  $color-blue-0
 
     &:before, &:after
       content: ""
       position: absolute
       z-index: 1
-      width: 59px
-      height: 59px
+      width: 57px
+      height: 57px
       -webkit-transform: scaleY(0.5774) rotate(-45deg)
       -ms-transform: scaleY(0.5774) rotate(-45deg)
       transform: scaleY(0.5774) rotate(-45deg)
-      background-color: $color-blue-2
-      left: 10.75px
+      background-color: $color-blue-0
+      left: 12px
 
     &:before
-      top: -29.76px
+      top: -27.76px
 
     &:after
       bottom: -53.0330px
@@ -146,7 +153,9 @@ button#remove-badges, button#add-badges
   .ribbon
     width: 100px
     position: relative 
-    margin-top: 38px
+    margin-top: 36px
+    max-height: 50px
+    overflow: hidden
     margin-left: -10px
     text-align: center
     font-size: 12px !important
@@ -163,9 +172,9 @@ button#remove-badges, button#add-badges
     box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
     h1
       font-size: 14px !important
-      margin-top: 50px
-      color: #590000
-      text-shadow: #d65c5c 0 1px 0
+      color: $color-red-0
+      line-height: 1.2rem
+      text-shadow: $color-red-3 0 1px 0
       margin: 0px
       padding: 2px 10px
 
@@ -198,7 +207,7 @@ button#remove-badges, button#add-badges
 
   .ribbon-stitches-top
     z-index: 2410
-    margin-top: -2px
+    margin-top: 2px
     border-top: 1px dashed rgba(0, 0, 0, 0.2)
     -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5)
     -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5)
@@ -212,46 +221,17 @@ button#remove-badges, button#add-badges
     -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3)
     box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.3)
 
-  img.earned, img.unearned
-    max-height: 5rem
-    margin: 0 auto
-    z-index: 80
-    position: absolute
-    margin: -14px 0 0 2px
-
   .available
     opacity: .5
 
   .badge-name
+    position: absolute
     font-weight: bold
     margin-top: 20px
-    position: absolute
     font-size: 1rem
     text-align: center
-    vertical-align: top
-    margin-top: 20px
-    bottom: -30px
     z-index: 2200
     width: 100%
-
-  .earned-box
-    position: absolute
-    top: 0
-    right: 4px
-    font-weight: bold
-    color: $color-black
-    text-align: center
-    width: 100%
-    font-size: 0.9rem
-    margin-top: -12px
-    z-index: 2200
-
-    width: 35px
-    height: 35px
-
-    &.unearned
-      background: $color-grey-6
-      display: none
 
   .gold-stars
     position: absolute
@@ -264,15 +244,12 @@ button#remove-badges, button#add-badges
     i.fa-fw
       z-index: 600 !important
 
-
-  &.unearned
-    .gold-stars
-      @include opacity(0.6)
-
   .badges-earned
     @include ribbon
 
   &.unearned
+    .gold-stars
+      @include opacity(0.6)
     .badges-earned
       background-color: $color-grey-6
       background-repeat: repeat-x
@@ -286,10 +263,3 @@ button#remove-badges, button#add-badges
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-grey-2', endColorstr='$color-grey-6', GradientType=0)
       &:after
         border-color: $color-grey-6 $color-grey-6 transparent $color-grey-6
-
-  .earned-total
-    display: inline
-    position: absolute
-    margin-top: -4px
-    font-size: 1rem
-    font-weight: bold
