--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -30,6 +30,7 @@ button#remove-badges, button#add-badges
   .badge-details
     margin: .25rem
     padding-top: 1rem
+    font-size: .8rem
 
 
 .grade-badge, .badge-table
