Fixed a bug in the kapital weighting system, cleaned up the display of weighted assignments on the student syllabus

--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -90,6 +90,16 @@ i.missing_grade
     th.draggable, td.draggable
       display: none
 
+@media (max-width: 2400px)
+  table.default_assignments_dynatable
+    tbody ul.button-bar li a.button
+      display: block
+      border-radius: $global-radius
+      padding: 2px 5px
+      white-space: nowrap
+      line-height: 1.2rem
+      margin-bottom: .2rem !important
+
 @media (max-width: 1000px)
   table
     th, td
