--- a/app/views/students/syllabus/_assignments.haml
+++ b/app/views/students/syllabus/_assignments.haml
@@ -11,19 +11,6 @@
       #{assignment_type.try(:name)} • #{ points assignment_type.visible_score_for_student(current_student) }/#{ points assignment_type.total_points_for_student(current_student) }
 
     .assignment-type-container
-      // If the course and particular assignment uses weights, display assignment weighting options
-      // with appropriate terminology. If a student has already set a weight, give the option to change
-      // weight; else if the student has not yet set a weight, give the option to set weights for the assignment.
-      - if assignment_type.student_weightable? && current_course.assignment_weight_open?
-        .label.multiplier-setting-open
-          - if @student.weighted_assignments?
-            = "#{current_student.weight_for_assignment_type(assignment_type)} #{(term_for :weights).titleize} Set"
-            = link_to "(Change)", assignment_type_weights_path(:student_id => @student.id), assignment_type: assignment_type
-          - else
-            = link_to "Set #{(term_for :weights).titleize}", assignment_type_weights_path(:student_id => @student.id), assignment_type: assignment_type
-      - elsif assignment_type.student_weightable?
-        .label.multiplier-setting-closed= "#{current_student.weight_for_assignment_type(assignment_type)} #{(term_for :weights).titleize}"
-        // Display the description for the assignment type if it exists.
       - if assignment_type.description?
         %p.description= raw assignment_type.description
 
@@ -36,7 +23,7 @@
             %th Points
             %th Due
             %th
-            %th{:width => "300"}
+            %th
         %tbody
           - assignments = assignment_type.assignments.includes(:assignment_type, :unlock_conditions)
           - assignments.each do |assignment|
@@ -57,26 +44,28 @@
                     - else
                       = "#{term_for :pass}/#{term_for :fail}"
                   - else
+                    - grade = grade_for_assignment
+                    // Checking to see if this assignment type is student weightable 
                     - if assignment.assignment_type.student_weightable?
-                      - grade = grade_for_assignment
-                      .icon
-                        .icon-tooltip
-                          = "#{ points grade.score } / #{points grade.point_total} points (Multiplied), #{points grade.raw_score} / #{ points assignment.point_total } points (Raw)"
+                      // Checking to see if this student has weighted this assignment anything other than 1
+                      - if current_student.weight_for_assignment_type(assignment.assignment_type) != 1 && current_course.default_assignment_weight != 1
                         - if grade_released_for_assignment
-                          .bold= "#{ points grade.score } / #{points grade.point_total} points earned"
-                          .italic= "Your Goal: #{points grade.predicted_score}" if grade && grade.predicted_score > 0 && current_user_is_student?
+                          .bold= "#{ points grade.score } / #{points grade.point_total} points (Multiplied)"
+                          .bold= "#{points grade.raw_score} / #{ points assignment.point_total } points (Raw)"
                         - else
-                          .italic.not_bold= "#{points grade.point_total} points possible"
-                          .italic.bold= "Your Goal: #{points grade.predicted_score}" if grade && grade.predicted_score > 0 && current_user_is_student?
+                          .italic= "#{points assignment.point_total} points possible"
+                          .bold= "Your Goal: #{points grade.predicted_score}" if grade && grade.predicted_score > 0 && current_user_is_student?
+                      - else
+                        - if grade_released_for_assignment
+                          .bold= "#{points grade.raw_score} / #{ points assignment.point_total } points"
                     - else
-                      - grade = grade_for_assignment
                       - if grade_released_for_assignment
                         .bold
-                          = "#{points current_student.score_for_assignment(assignment)} / #{points assignment.point_total} points earned"
+                          = "#{points grade.score} / #{points grade.point_total} points earned"
                         .italic= "Your Goal: #{points grade.predicted_score}" if grade && grade.predicted_score > 0 && current_user_is_student?
                       - else
-                        .italic.not_bold= "#{points grade.point_total} points possible"
-                        .italic.bold= "Your Goal: #{points grade.predicted_score}" if grade && grade.predicted_score > 0 && current_user_is_student?
+                        .italic= "#{points assignment.point_total} points possible"
+                        .bold= "Your Goal: #{points grade.predicted_score}" if grade && grade.predicted_score > 0 && current_user_is_student?
                 %td
                   - if assignment.future?
                     %span= "#{assignment.due_at.strftime("%A, %b %d, %l:%M%p")}"
