Display possible points if no released grade

--- a/app/views/students/syllabus/_assignments.haml
+++ b/app/views/students/syllabus/_assignments.haml
@@ -48,24 +48,24 @@
                     // Checking to see if this assignment type is student weightable 
                     - if assignment.assignment_type.student_weightable?
                       // Checking to see if this student has weighted this assignment anything other than 1
-                      - if current_student.weight_for_assignment_type(assignment.assignment_type) != 1 && current_course.default_assignment_weight != 1
+                      - if (current_student.weight_for_assignment_type(assignment.assignment_type) == 0 && current_course.default_assignment_weight != 1) || current_student.weight_for_assignment_type(assignment.assignment_type) > 1
                         - if grade_released_for_assignment
+                          = "#{points grade.raw_score} / #{ points assignment.point_total } points (Raw)"
                           .bold= "#{ points grade.score } / #{points grade.point_total} points (Multiplied)"
-                          .bold= "#{points grade.raw_score} / #{ points assignment.point_total } points (Raw)"
                         - else
-                          .italic= "#{points assignment.point_total} points possible"
-                          .bold= "Your Goal: #{points grade.predicted_score}" if grade && grade.predicted_score > 0 && current_user_is_student?
+                          .italic= "#{points grade.point_total} points possible"
                       - else
                         - if grade_released_for_assignment
-                          .bold= "#{points grade.raw_score} / #{ points assignment.point_total } points"
+                          .bold= "#{points grade.raw_score} / #{ points grade.point_total } points"
+                        - else
+                          .italic= "#{points assignment.point_total} points possible"
                     - else
                       - if grade_released_for_assignment
                         .bold
                           = "#{points grade.score} / #{points grade.point_total} points earned"
-                        .italic= "Your Goal: #{points grade.predicted_score}" if grade && grade.predicted_score > 0 && current_user_is_student?
                       - else
                         .italic= "#{points assignment.point_total} points possible"
-                        .bold= "Your Goal: #{points grade.predicted_score}" if grade && grade.predicted_score > 0 && current_user_is_student?
+                    .bold= "Your Goal: #{points grade.predicted_score}" if grade && grade.predicted_score > 0 && current_user_is_student?
                 %td
                   - if assignment.future?
                     %span= "#{assignment.due_at.strftime("%A, %b %d, %l:%M%p")}"
