--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -58,7 +58,7 @@
                   %li= link_to raw("<i class='fa fa-dashboard fa-fw'></i> Dashboard"), student_path(student), :class => 'button'
                   %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit"), edit_user_path(student), :class => 'button'
 
-  %h4.subtitle Challenge Grades
+  %h4.subtitle #{term_for :challenge } Grades 
 
   %table.nofeatures_default_score_dynatable
     %thead
