adding team challenges with grades to sample data, standardize score naming column

--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -35,7 +35,7 @@
       %thead
         %tr
           %th= current_course.team_term
-          %th  Points Earned
+          %th Score
           - if @challenge.has_levels?
             %th Level
           - if @challenge.release_necessary?
