--- a/app/views/layouts/navigation/_authenticated_nav.haml
+++ b/app/views/layouts/navigation/_authenticated_nav.haml
@@ -16,5 +16,5 @@
       %img.profile-pic{:src => current_user.avatar_file_name, :height => 20}
     = current_user.public_name
     %i.fa.fa-caret-down.hidden-2m
-  %ul.subnav
+  %ul.subnav#account-info
     = render "layouts/navigation/account_info"
