--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -33,23 +33,24 @@
 
   //badge icon, total awarded, and points
   .badge-card
-    .badge-table.hexagon.awarded
-      %img.earned{:src => @badge.icon, :alt => @badge.name }
-      .ribbon
-        .ribbon-stitches-top
-        %strong.ribbon-content
-          %h1= @badge.name
-        .ribbon-stitches-bottom
-      .ribbon-ends
-      .gold-stars
-        %i.fa.fa-star.fa-fw
-        .earned-count= @badge.earned_badges.count
-        .badges-earned.blue
-    .badge-details
-      %ul
+    .card-ribbon
+      .badge-table.hexagon.awarded
+        %img.earned{:src => @badge.icon, :alt => @badge.name }
+        .ribbon
+          .ribbon-stitches-top
+          .ribbon-content
+            .badge-name= @badge.name
+          .ribbon-stitches-bottom
+        .ribbon-ends
+        .gold-stars
+          %i.fa.fa-star.fa-fw
+            .earned-count= @badge.earned_badges.count
+          .badges-earned.blue
+      .badge-details
         - if @badge.point_total?
-          %li="#{@badge.point_total} Points"
-        %li="Awarded: #{@badge.awarded_count}"
+          .points="#{@badge.point_total} Points"
+        - if @badge.description?
+          .feedback= @badge.description
         - if @badge.is_unlockable?
           %li 
             %a
@@ -69,11 +70,6 @@
                 - @badge.unlock_keys.each do |key|
                   %li= "#{key.unlockable.name} is unlocked by #{key.condition_state} #{key.condition.name}"
 
-  .clear
-  - if @badge.description?
-    %p
-      %b Description:
-      = raw @badge.description
 
   - if @badge.badge_files.present?
     %p
@@ -84,6 +80,8 @@
             = link_to bf.filename, bf.url
             - if current_user_is_staff?
               = link_to "(Remove)", remove_uploads_path({ :model => "BadgeFile", :upload_id => bf.id } )
+  .clear
+  
   - if current_user_is_staff?
     %table.nofeatures_default_last_name_dynatable
       %thead
