--- a/app/assets/stylesheets/_ribbon_mixins.sass
+++ b/app/assets/stylesheets/_ribbon_mixins.sass
@@ -2,7 +2,6 @@
   display: block
   width: 18px
   position: absolute
-  top: 16px
   color: $color-white
   padding: 8px 0 0 0
   margin-left: 11px
@@ -10,20 +9,11 @@
   text-align: center
   z-index: -10
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3)
-  &:before
-    display: block
-    width: 18px
-    height: 0
-    position: absolute
-    top: 3px
-    content: ""
-    z-index: 10
-    border-top: 1px dotted rgba(0, 0, 0, 0.2)
-    border-bottom: 1px dotted rgba(255, 255, 255, 0.3)
 
   &:after
     display: block
     width: -12px
+    top: 14px
     height: 0
     content: ""
     position: relative
@@ -34,92 +24,73 @@
 
   &.red
     background-color: $color-red-1
-    background-repeat: repeat-x
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#fe0000), to(#cb0000))
-    background-image: -moz-linear-gradient(top, #fe0000, #cb0000)
-    background-image: -ms-linear-gradient(top, #fe0000, #cb0000)
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fe0000), color-stop(100%, #cb0000))
-    background-image: -webkit-linear-gradient(top, #fe0000, #cb0000)
-    background-image: -o-linear-gradient(top, #fe0000, #cb0000)
-    background-image: linear-gradient(top, #fe0000, #cb0000)
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fe0000', endColorstr='#cb0000', GradientType=0)
+    background-image: -khtml-gradient(linear, left top, left bottom, from($color-red-1), to($color-red-2))
+    background-image: -moz-linear-gradient(top, $color-red-1, $color-red-2)
+    background-image: -ms-linear-gradient(top, $color-red-1, $color-red-2)
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $color-red-1), color-stop(100%, $color-red-2))
+    background-image: -webkit-linear-gradient(top, $color-red-1, $color-red-2)
+    background-image: -o-linear-gradient(top, $color-red-1, $color-red-2)
+    background-image: linear-gradient(top, $color-red-1, $color-red-2)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-red-1', endColorstr='$color-red-2', GradientType=0)
     &:after
-      border-color: #cb0000 #cb0000 transparent #cb0000
+      border-color: $color-red-2 $color-red-2 transparent $color-red-2
   &.orange
     background-color: $color-orange-1
-    background-repeat: repeat-x
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#ff5b18), to(#e44200))
-    background-image: -moz-linear-gradient(top, #ff5b18, #e44200)
-    background-image: -ms-linear-gradient(top, #ff5b18, #e44200)
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ff5b18), color-stop(100%, #e44200))
-    background-image: -webkit-linear-gradient(top, #ff5b18, #e44200)
-    background-image: -o-linear-gradient(top, #ff5b18, #e44200)
-    background-image: linear-gradient(top, #ff5b18, #e44200)
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5b18', endColorstr='#e44200', GradientType=0)
+    background-image: -khtml-gradient(linear, left top, left bottom, from($color-orange-1), to($color-orange-2))
+    background-image: -moz-linear-gradient(top, $color-orange-1, $color-orange-2)
+    background-image: -ms-linear-gradient(top,$color-orange-1, $color-orange-2)
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $color-orange-1), color-stop(100%, $color-orange-2))
+    background-image: -webkit-linear-gradient(top, $color-orange-1, $color-orange-2)
+    background-image: -o-linear-gradient(top, $color-orange-1, $color-orange-2)
+    background-image: linear-gradient(top, $color-orange-1, $color-orange-2)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-orange-1', endColorstr='$color-orange-2', GradientType=0)
     &:after
-      border-color: #e44200 #e44200 transparent #e44200
+      border-color: $color-orange-2 $color-orange-2 transparent $color-orange-2
   &.yellow
     background-color: $color-yellow-1
-    background-repeat: repeat-x
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#ffc200), to(#cc9b00))
-    background-image: -moz-linear-gradient(top, #ffc200, #cc9b00)
-    background-image: -ms-linear-gradient(top, #ffc200, #cc9b00)
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffc200), color-stop(100%, #cc9b00))
-    background-image: -webkit-linear-gradient(top, #ffc200, #cc9b00)
-    background-image: -o-linear-gradient(top, #ffc200, #cc9b00)
-    background-image: linear-gradient(top, #ffc200, #cc9b00)
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffc200', endColorstr='#cc9b00', GradientType=0)
+    background-image: -khtml-gradient(linear, left top, left bottom, from($color-yellow-1), to($color-yellow-1))
+    background-image: -moz-linear-gradient(top, $color-yellow-1, $color-yellow-1)
+    background-image: -ms-linear-gradient(top, $color-yellow-1, $color-yellow-1)
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $color-yellow-1), color-stop(100%, $color-yellow-1))
+    background-image: -webkit-linear-gradient(top, $color-yellow-1, $color-yellow-1)
+    background-image: -o-linear-gradient(top, $color-yellow-1, $color-yellow-1)
+    background-image: linear-gradient(top, $color-yellow-1, $color-yellow-1)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-yellow-1', endColorstr='$color-yellow-1', GradientType=0)
     &:after
-      border-color: #cc9b00 #cc9b00 transparent #cc9b00
+      border-color: $color-yellow-1 $color-yellow-1 transparent $color-yellow-1
   &.green
     background-color: $color-green-3
-    background-repeat: repeat-x
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#8dba19), to(#6b8d13))
-    background-image: -moz-linear-gradient(top, #8dba19, #6b8d13)
-    background-image: -ms-linear-gradient(top, #8dba19, #6b8d13)
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #8dba19), color-stop(100%, #6b8d13))
-    background-image: -webkit-linear-gradient(top, #8dba19, #6b8d13)
-    background-image: -o-linear-gradient(top, #8dba19, #6b8d13)
-    background-image: linear-gradient(top, #8dba19, #6b8d13)
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8dba19', endColorstr='#6b8d13', GradientType=0)
+    background-image: -khtml-gradient(linear, left top, left bottom, from($color-green-3), to($color-green-4))
+    background-image: -moz-linear-gradient(top, $color-green-3, $color-green-4)
+    background-image: -ms-linear-gradient(top, $color-green-3, $color-green-4)
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $color-green-3), color-stop(100%, $color-green-4))
+    background-image: -webkit-linear-gradient(top, $color-green-3, $color-green-4)
+    background-image: -o-linear-gradient(top, $color-green-3, $color-green-4)
+    background-image: linear-gradient(top, $color-green-3, $color-green-4)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-green-3', endColorstr='$color-green-4', GradientType=0)
     &:after
-      border-color: #6b8d13 #6b8d13 transparent #6b8d13
+      border-color: $color-green-4 $color-green-4 transparent $color-green-4
   &.blue
-    background-color: $color-blue-3
-    background-repeat: repeat-x
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#0056AD), to(#114982))
-    background-image: -moz-linear-gradient(top, #0056AD, #114982)
-    background-image: -ms-linear-gradient(top, #0056AD, #114982)
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0056AD), color-stop(100%, #114982))
-    background-image: -webkit-linear-gradient(top, #0056AD, #114982)
-    background-image: -o-linear-gradient(top, #0056AD, #114982)
-    background-image: linear-gradient(top, #0056AD, #114982)
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0056AD', endColorstr='#114982', GradientType=0)
+    background-color: $color-blue-00
+    background-image: -khtml-gradient(linear, left top, left bottom, from($color-blue-0), to($color-blue-00))
+    background-image: -moz-linear-gradient(top, $color-blue-0, $color-blue-00)
+    background-image: -ms-linear-gradient(top, $color-blue-0, $color-blue-00)
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $color-blue-0), color-stop(100%, $color-blue-00))
+    background-image: -webkit-linear-gradient(top, $color-blue-0, $color-blue-00)
+    background-image: -o-linear-gradient(top, $color-blue-0, $color-blue-00)
+    background-image: linear-gradient(top, $color-blue-0, $color-blue-00)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-blue-0', endColorstr='$color-blue-00', GradientType=0)
     &:after
-      border-color: #114982 #114982 transparent #114982
-  &.purple
-    background-color: #611b85
-    background-repeat: repeat-x
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#8024af), to(#611b85))
-    background-image: -moz-linear-gradient(top, #8024af, #611b85)
-    background-image: -ms-linear-gradient(top, #8024af, #611b85)
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #8024af), color-stop(100%, #611b85))
-    background-image: -webkit-linear-gradient(top, #8024af, #611b85)
-    background-image: -o-linear-gradient(top, #8024af, #611b85)
-    background-image: linear-gradient(top, #8024af, #611b85)
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8024af', endColorstr='#611b85', GradientType=0)
-    &:after
-      border-color: #611b85 #611b85 transparent #611b85
+      border-color: $color-blue-00 $color-blue-00 transparent $color-blue-00
   &.black
-    background-color: #323232
-    background-repeat: repeat-x
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#4b4b4b), to(#323232))
-    background-image: -moz-linear-gradient(top, #4b4b4b, #323232)
-    background-image: -ms-linear-gradient(top, #4b4b4b, #323232)
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4b4b4b), color-stop(100%, #323232))
-    background-image: -webkit-linear-gradient(top, #4b4b4b, #323232)
-    background-image: -o-linear-gradient(top, #4b4b4b, #323232)
-    background-image: linear-gradient(top, #4b4b4b, #323232)
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4b4b4b', endColorstr='#323232', GradientType=0)
+    background-color: $color-grey-1
+    background-image: -khtml-gradient(linear, left top, left bottom, from($color-grey-2), to($color-grey-1))
+    background-image: -moz-linear-gradient(top, $color-grey-2, $color-grey-1)
+    background-image: -ms-linear-gradient(top, $color-grey-2, $color-grey-1)
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $color-grey-2), color-stop(100%, $color-grey-1))
+    background-image: -webkit-linear-gradient(top, $color-grey-2, $color-grey-1)
+    background-image: -o-linear-gradient(top, $color-grey-2, $color-grey-1)
+    background-image: linear-gradient(top, $color-grey-2, $color-grey-1)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-grey-2', endColorstr='$color-grey-1', GradientType=0)
     &:after
-      border-color: #323232 #323232 transparent #323232
+      border-color: $color-grey-1 $color-grey-1 transparent $color-grey-1
