--- a/app/views/students/syllabus/_challenges.haml
+++ b/app/views/students/syllabus/_challenges.haml
@@ -1,10 +1,10 @@
-- if current_course.team_challenges? && current_course.add_team_score_to_student?
+- if current_course.team_challenges? && current_course.add_team_score_to_student? && current_student.team_for_course(current_course).present?
   .challenge
 
     %h3.collapse 
       %a
         %i.fa.fa-angle-double-right.fa-fw
-      #{term_for :challenges} #{ points @student.team.try(:challenge_grade_score) }/#{points current_course.point_total_for_challenges}
+      #{term_for :challenges} #{ points @student.team_for_course(current_course).challenge_grade_score }/#{points current_course.point_total_for_challenges}
 
     .collapse-hidden
       %table
@@ -19,20 +19,20 @@
           %tr
             %td{:width => "25%"}= link_to challenge.name, challenge
             %td{:width => "25%"}
-              - if current_student.team_for_course(current_course).present?
-                - if challenge.challenge_grade_for_team(current_student.team_for_course(current_course)).present?
-                  = "#{points challenge.challenge_grade_for_team(current_student.team_for_course(current_course)).try(:score)} / #{points challenge.point_total} points"
+              - if current_student.team_for_course(current_course).present? && challenge.challenge_grade_for_team(current_student.team_for_course(current_course)).present?
+                .bold= "#{points challenge.challenge_grade_for_team(current_student.team_for_course(current_course)).try(:score)} / #{points challenge.point_total} points earned"
               - else
                 %span.italic= "#{points challenge.point_total} points possible"
             %td{:width => "25%"}
               - if challenge.future?
-                = "#{challenge.due_at.strftime("%A, %B %d, %l:%M%p")}"
-            
+                = "#{challenge.due_at.strftime("%A, %B %d, %l:%M%p")}"     
+              - else
+                %span       
             - if current_user_is_staff?
               %td
                 .right
                   %ul.button-bar
-                    - if challenge.challenge_grade_for_team(current_student.team).present?
+                    - if challenge.challenge_grade_for_team(current_student.team_for_course(current_course)).present?
                       %li
                         %a{:href => edit_challenge_challenge_grade_path(challenge.id, challenge.challenge_grade_for_team(current_student.team), :team_id => current_student.team_for_course(current_course).id), :class => 'button'}
                           Edit Grade
