--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -7,8 +7,8 @@
 .badge-card
   position: relative
   height: 7.85rem
-  width: 25rem
-  background-color: $color-green-2
+  width: 17.25rem
+  background-color: $color-blue-1
   border-radius: $global-radius
   padding: .75rem
   float: left
@@ -20,8 +20,8 @@
   .card-ribbon
     border: 1px dashed $color-white
     border-radius: $global-radius
-    height: 6.75rem
-    padding: .5rem
+    height: 6.7rem
+    padding: .5rem .15rem .5rem .5rem
     overflow: hidden
     color: $color-white
     font-size: .65rem
@@ -64,7 +64,7 @@ button#remove-badges, button#add-badges
     width: 83px
     height: 36px
     z-index: 100
-    margin: 1.75rem 2.3rem 3rem 2rem
+    margin: 1.75rem 2rem 3rem 1.2rem
     background-color: $color-blue-0
 
     &:before, &:after
@@ -157,13 +157,13 @@ button#remove-badges, button#add-badges
     -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
     box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
     .badge-name
-      font-size: .9rem
-      margin-top: 50px
+      font-size: .7rem
+      margin: 0px
       color: $color-black
       text-shadow: #d65c5c 0 1px 0
-      margin: 0px
       padding: 2px 10px
       font-weight: bold
+      line-height: .9rem
 
   /* ends to the red ribbon */
   .ribbon-ends
@@ -199,8 +199,7 @@ button#remove-badges, button#add-badges
 
   .ribbon-stitches-bottom
     z-index: 2410
-    position: absolute
-    margin-top: -5px
+    margin-bottom: 3px
     border-top: 1px dashed rgba(0, 0, 0, 0.2)
     -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3)
     -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3)
