--- a/app/views/assignments/individual/_table_body.html.haml
+++ b/app/views/assignments/individual/_table_body.html.haml
@@ -48,7 +48,9 @@
       - submissions_for_assignment = student.submissions.where(:assignment_id => @assignment)
       %td
         - if submissions_for_assignment.present?
-          = submissions_for_assignment[0].updated_at
+          = "Created: #{submissions_for_assignment[0].created_at}"
+          - if submissions_for_assignment[0].created_at != submissions_for_assignment[0].updated_at
+            = "Last Updated: #{submissions_for_assignment[0].updated_at}"
     %td
       .right
         %ul.button-bar
