--- a/app/views/staff/show.html.haml
+++ b/app/views/staff/show.html.haml
@@ -33,4 +33,4 @@
           %td
             %ul.button-bar
               %li= link_to raw('<i class="fa fa-edit fa-fw"> </i> Edit'), edit_assignment_grade_path(grade.assignment, :student_id => grade.student.id), :class => 'button'
-              %li= link_to raw('<i class="fa fa-trash fa-fw"> </i> Delete'), remove_grades_assignment_path(:assignment_id => grade.assignment.id, :grade_id => grade.id), :class => 'button', :data => { confirm: 'Are you sure?' }, :method => :post
+              %li= link_to raw('<i class="fa fa-trash fa-fw"> </i> Delete'), remove_grades_assignment_path(:assignment_id => grade.assignment.id, :id => grade.id), :class => 'button', :data => { confirm: 'Are you sure?' }, :method => :post
