--- a/app/assets/javascripts/angular/templates/ng_predictor_challenges.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_challenges.html.haml
@@ -27,10 +27,11 @@
 
         .article-graded{'ng-if' => 'articleGraded(challenge)'}
           .grade
+            score: {{challenge.grade.score}}
             {{challenge.grade.score | number}} / {{challenge.grade.point_total | number}}
 
 
-        .article-predicted{'ng-if' => '! articleGraded(challenge)'}
+        .article-predicted{'ng-if' => '! challengeGraded(challenge)'}
           %div
             .slider{'ui-slider'=>'slider(challenge)','min'=>'0', 'max'=>'{{challenge.grade.point_total}}', 'ng-model'=>'challenge.prediction.points_earned', 'data'=>{'id'=>'{{challenge.id}}','article-type'=>'challenge'}}
 
