--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -6,11 +6,13 @@
 /* used on the badge show page for both instructors and students, and grade standard edit form */ 
 .badge-card
   position: relative
-  height: 7.85rem
-  width: 17.25rem
+  min-height: 8%
+  max-height: 7.85rem
+  max-width: 30%
+  min-width: 17.5rem
   background-color: $color-blue-1
   border-radius: $global-radius
-  padding: .75rem
+  padding: .5rem
   float: left
   margin: 0 .5rem .5rem 0
 
@@ -18,9 +20,11 @@
     background-color: $color-blue-2
 
   .card-ribbon
+    position: relative
     border: 1px dashed $color-white
     border-radius: $global-radius
-    height: 6.7rem
+    min-height: 5%
+    max-height: 6.7rem
     padding: .5rem .15rem .5rem .5rem
     overflow: hidden
     color: $color-white
@@ -61,26 +65,26 @@ button#remove-badges, button#add-badges
     @include transition-timing-function(ease)
     cursor: pointer
     cursor: hand
-    width: 83px
-    height: 36px
+    width: 32%
+    height: 4%
     z-index: 100
-    margin: 1.75rem 2rem 3rem 1.2rem
-    background-color: $color-blue-0
+    margin: 10% 10% 30% 10%
+    background-color: $color-yellow-1
 
     &:before, &:after
       content: ""
       position: absolute
       z-index: 1
-      width: 60px
-      height: 59px
+      width: 75%
+      height: 202%
       -webkit-transform: scaleY(0.5774) rotate(-45deg)
       -ms-transform: scaleY(0.5774) rotate(-45deg)
       transform: scaleY(0.5774) rotate(-45deg)
       background-color: $color-alt-blue-1
-      left: 11.25px
+      left: 10px
 
     &:before
-      top: -29.76px
+      top: -30px
 
     &:after
       bottom: -43.0330px
@@ -134,13 +138,13 @@ button#remove-badges, button#add-badges
       position: absolute
       top: 0.5773502691896257px
       left: 0
-      width: 90px
-      height: 55.4478px
+      width: 40%
+      height: 30%
       z-index: 2
       background: inherit
 
   .ribbon
-    width: 100px
+    width: 120%
     position: absolute
     margin-top: 30px
     margin-left: -10px
@@ -206,7 +210,7 @@ button#remove-badges, button#add-badges
     box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.3)
 
   img
-    max-height: 5rem
+    width: 100%
     margin: 0 auto
     z-index: 80
     position: absolute
@@ -217,7 +221,7 @@ button#remove-badges, button#add-badges
 
   .gold-stars
     position: absolute
-    top: -11px
+    top: -10px
     right: -20px
     font-size: 2rem
     color: $color-yellow-1
