Added specs for predictor, and bugfix for grade display
    predicted badges controller
    grade scheme elements json spec
    grade scheme elements controller spec
    fixed attributes for assignment controller spec
    specs for unlock keys and conditions
    adapt predictor directive to new stateful naming
    adds stateful naming for icons in predictor
    fixed bug, checks if assignment is included in predictor
    assignment jbuilder specs
    remove icon padding
    added grades to assignment as hash for predictor
    specs for predictor assignments and grades
    predictor specs covering assignment_types

--- a/app/assets/javascripts/angular/templates/ng_predictor_icons.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_icons.html.haml
@@ -1,4 +1,4 @@
-.icon.predictor-required-icon{'ng-if' => 'target[iconName]'}
+.icon.predictor-required-icon{'ng-if' => 'target[iconName]', 'ng-class' => 'iconName'}
   %a
     %i.fa.fa-fw{'class'=>'{{iconHtml[iconName].icon}}'}
   .display_on_hover.hover-style
