testing course creation

--- a/app/views/layouts/navigation/_authenticated_nav.haml
+++ b/app/views/layouts/navigation/_authenticated_nav.haml
@@ -1,4 +1,4 @@
-%li.dropdown
+%li.dropdown#mycourses
   %a.section-title{:href => "#", :title => "My Courses"} 
     My Courses
     %i.fa.fa-caret-down.hidden-sm
